--- a/classes/A0001.cls
+++ b/classes/A0001.cls
@@ -4,9 +4,10 @@ public Account createAccount(String name)  //method to create account
 {//line1 source
 //sai Add comment for Account A1
 //saikumar test
-Account a111412= new Account(); //line7 source
-a111412.Name = name;
-return a111412;
+Account aq= new Account(); //line7 source
+aq.Name = name;
+return aq;
 //newjob11111111111111
+
 }
 }
