--- a/classes/A0001.cls
+++ b/classes/A0001.cls
@@ -4,11 +4,9 @@ public Account createAccount(String name)  //method to create account
 {//line1 source
 //sai Add comment for Account A1
 //saikumar test
-Account aq= new Account(); //line7 source
-aq.Name = name;
-return aq;
-//newjob11111111111111
-//fadfsdfsd
-
+Account a111412= new Account(); //line7 source
+a111412.Name = name;
+return a111412;
+//123
 }
 }
