--- a/classes/A0001.cls
+++ b/classes/A0001.cls
@@ -5,6 +5,7 @@ public Account createAccount(String name)  //method to create account
 Account a111412= new Account(); //line7 source
 a111412.Name = name;
 return a111412;
-//007
+//newjob111111111111111111
+}
 }
 }
