--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -2,9 +2,10 @@ public Class A0
 {
 public Account createAccount(String name)  //method to create account
 {
-Account a0111= new Account();
-a0111.Name = name;
-return a0111;
-//a0111
+Account s21= new Account();
+s21.Name = name;
+return s21;
+//34512
+}
 }
 }
