Sai-RL-Merge-GitHub_Int_17

--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -2,9 +2,9 @@ public Class A0
 {
 public Account createAccount(String name)  //method to create account
 {
-Account s007= new Account();
-s007.Name = name;
-return s007;
-//sai0007
+Account a9= new Account();
+a9.Name = name;
+return a9;
+//a9
 }
 }
