--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -2,9 +2,10 @@ public Class A0
 {
 public Account createAccount(String name)  //method to create account
 {
-Account a9= new Account();
-a9.Name = name;
-return a9;
-//a9
+Account s21= new Account();
+s21.Name = name;
+return s21;
+//34512
+}
 }
 }
