--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -2,10 +2,10 @@ public Class A0
 {
 public Account createAccount(String name)  //method to create account
 {
-Account s21= new Account();
-s21.Name = name;
-return s21;
-//34512
+Account s2145= new Account();
+s2145.Name = name;
+return s2145;
+//34512vstest12
 }
 }
 }
