Sai-RL-Merge-GitHub_Int_19

--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -2,9 +2,9 @@ public Class A0
 {
 public Account createAccount(String name)  //method to create account
 {
-Account s21= new Account();
-s21.Name = name;
-return s21;
-//sai89075re1
+Account s211= new Account();
+s211.Name = name;
+return s211;
+//sai123
 }
 }
