--- a/classes/A000.cls
+++ b/classes/A000.cls
@@ -2,11 +2,9 @@ public Class A000
 {
 public Account createAccount(String name)  //method to create account
 {
-Account sai231111= new Account();
-sai231111.Name = name;
-return sai231111;
-//dsdsd1234111
-//NewPR1ssvxcvcvcvcv11
-//123456
+Account v12= new Account();
+v12.Name = name;
+return v12;
+//007
 }
 }
