--- a/classes/A00711.cls
+++ b/classes/A00711.cls
@@ -1,6 +1,6 @@
-public Class A0
+public Class A00711
 {
-public Account createAccount(String name)
+public Account createAccount0711(String name)
 {
 Account a0012111991= new Account();//kjhkhkhk
 a0012111991.Name = name;
