--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -2,9 +2,9 @@ public Class A0
 {
 public Account createAccount(String name)  //method to create account
 {
-Account s21= new Account();
-s21.Name = name;
-return s21;
-//sai89075re1
+Account a9= new Account();
+a9.Name = name;
+return a9;
+//a9
 }
 }
