--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -36,10 +36,7 @@ VERSION     AUTHOR  DATE        DETAIL
 6.0 -     Venkat    2/7/2016    Updated code as part of Request 9599(Feb Release 2016)  
 ============================================================================================================================================== 
 */
-string Role;
-string LOB;
-string Country;
-string Region;
+string Role, LOB, Country,Region;
 /*Purpose: This class contains static methods which are used by trgger TRG07
 ==============================================================================================================================================
 The methods called perform following functionality:
