--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -1,5 +1,9 @@
 public Class A0
 {
+//hello autorabit
+// hello! 
+//Hello !!!
+//Hello !!!a
 public Account createAccount(String name)  //method to create account
 {//comment source line4 srcmodififylast
 Account QDTest= new Account();
