--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -1,9 +1,5 @@
 public Class A0
 {
-//hello autorabit
-// hello! 
-//Hello !!!
-//Hello !!!a
 public Account createAccount(String name)  //method to create account
 {//comment source line4 srcmodififylast
 Account QDTest= new Account();
@@ -13,8 +9,7 @@ Account a0123111111= new Account(); //commentsource line2 modify1
 a0123111111.Name = name; //line3
 return a0123111111; //line7 src modifylast1
 //a2111111111111111111111111
-//Testrep modify11111111111111111111111
-//a11233434cxbcbvcb
-//new Test1234343543546546
+//Testrep modify111111vcvcxvcxv
+//vdvsvsdvs
 }
 }
