--- a/classes/A00000LgKTWXnk.cls
+++ b/classes/A00000LgKTWXnk.cls
@@ -1,9 +1,10 @@
-public Class A00000UipcOVCKCqWy
+public Class A00000LgKTWXnk
 {
 public Account createAccount(String name) 
 {
 Account a1= new Account(); 
 a1.Name = name; 
 return a1;
+//Added one
 }
 }
