--- a/classes/A00000AOZGddBpOrC.cls
+++ b/classes/A00000AOZGddBpOrC.cls
@@ -2,9 +2,9 @@ public Class A00000AOZGddBpOrC
 {
 public Account createAccount(String name) 
 {
-Account a2= new Account(); 
-a2.Name = name; 
-return a2;
-//hiiudacsav Test
+Account a1= new Account(); 
+a1.Name = name; 
+return a1;
+//hiiudacsa
 }
 }
