--- a/classes/A0071.cls
+++ b/classes/A0071.cls
@@ -1,4 +1,5 @@
 public Class A0071
+//Hello AutoRABIT
 {
 public Account createAccount(String name)  //method to create account
 {
@@ -10,6 +11,6 @@ a231.Name = name;
 return a231;
 //sa1111111111
 //modify
-//Comment addgggg
+//Comment add
 }
 }
