--- a/classes/A151.cls
+++ b/classes/A151.cls
@@ -4,8 +4,8 @@ public Account createAccount(String name)  //method to create account
 {
 //sai Add comment for Account A1
 //saikumar Test1
-Account a01111= new Account();
-a01111.Name = name;
-return a01111;
+Account a011111= new Account();
+a011111.Name = name;
+return a011111;
 }
 }
