--- a/classes/A0071.cls
+++ b/classes/A0071.cls
@@ -1,4 +1,5 @@
 public Class A0071
+//Hello AutoRABIT
 {
 public Account createAccount(String name)  //method to create account
 {
@@ -9,6 +10,7 @@ a231.Name = name;
 //maven4 Modify
 return a231;
 //sa1111111111
-//Newly added comment
+//modify
+//Comment addbvbvcb
 }
 }
