--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -1,5 +1,9 @@
 public Class A0
 {
+//hello autorabit
+// hello! 
+//Hello !!!
+//Hello !!!a
 public Account createAccount(String name)  //method to create account
 {//comment source line4 srcmodififylast
 Account QDTest= new Account();
@@ -11,5 +15,6 @@ return a0123111111; //line7 src modifylast1
 //a2111111111111111111111111
 //Testrep modify11111111111111111111111
 //a11233434cxbcbvcb
+//new Test1234343543546546111111111111111
 }
 }
