--- a/classes/A000.cls
+++ b/classes/A000.cls
@@ -2,10 +2,9 @@ public Class A000
 {
 public Account createAccount(String name)  //method to create account
 {
-Account sai231111= new Account();
-sai231111.Name = name;
-return sai231111;
-//dsdsd1234111111111
-//NewPR1ssvxcvcvcvcv111111
+Account v12= new Account();
+v12.Name = name;
+return v12;
+//0071111
 }
 }
