--- a/classes/SJun29cls1.cls
+++ b/classes/SJun29cls1.cls
@@ -1,10 +1,7 @@
-public Class A027
+public Class SJun29cls1
 {
 public Account createAccount(String name)  //method to create account
 {
-//test edit comment for Account A0
-//saikumar test mar20
-//saikumar
 Account s1= new Account();
 s1.Name = name;
 return s1;
