--- a/classes/QC1.cls
+++ b/classes/QC1.cls
@@ -1,12 +1,11 @@
-public Class A027
+public Class QC1
 {
 public Account createAccount(String name)  //method to create account
 {
-//test edit comment for Account A0
-//saikumar test mar20
-//saikumar
 Account s1= new Account();
 s1.Name = name;
 return s1;
+//s
+//s
 }
 }
