--- a/classes/skvcls1.cls
+++ b/classes/skvcls1.cls
@@ -1,12 +1,10 @@
-public Class A027
+public Class skvcls1
 {
 public Account createAccount(String name)  //method to create account
 {
-//test edit comment for Account A0
-//saikumar test mar20
-//saikumar
 Account s1= new Account();
 s1.Name = name;
 return s1;
+//Sbthree Comment
 }
 }
