--- a/classes/A00000AADmnDec.cls
+++ b/classes/A00000AADmnDec.cls
@@ -1,10 +1,10 @@
-public Class A00000
+public Class A00000AADmnDec
 {
 public Account createAccount(String name) 
 {
 Account a1= new Account(); 
 a1.Name = name; 
 return a1;
-//dsdfsd
+//fsdhsdhsdguys
 }
 }
