--- a/classes/A000.cls
+++ b/classes/A000.cls
@@ -1,5 +1,4 @@
 public Class A000
-//HelloAR
 {
 public Account createAccount(String name)  //method to create account
 {
@@ -8,9 +7,6 @@ sai231111.Name = name;
 return sai231111;
 //dsdsd1234111
 //NewPR1ssvxcvcvcvcv11
-//upodarevcxvxcbcbcbcnvvbnvbnbmbmb
-//new1233asfdfdsfdsgfdgvxcvxcv
-//new11111111
-//newupdate1234
+//wqwwwwwvxcvcvbvcbvcb
 }
 }
