--- a/classes/A180.cls
+++ b/classes/A180.cls
@@ -4,9 +4,9 @@ public Account createAccount(String name)  //method to create account
 {
 //sai Add comment for Account A1
 //saikumar Test1
-Account a18101= new Account();
-a18101.Name = name;
-return a18101;
-//sai test
+Account a1810= new Account();
+a1810.Name = name;
+return a1810;
+//sai
 }
 }
