--- a/classes/a0testclass.cls
+++ b/classes/a0testclass.cls
@@ -1,6 +1,7 @@
 @istest
 public class a0testclass{
- static testmethod void a0test(){
+//Hello
+static testmethod void a0test(){
 A0 Octa0 = new A0();
 Octa0.createAccount('name');
 //sai1
