Feature111 - Added new field and changed class

--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -1,6 +1,6 @@
 public Class A0
 {
-//Hello World
+//Hello Accenture
 public Account createAccount(String name)  //method to create account
 {//comment source line4 srcmodififylast
 Account QDTest= new Account();
