--- a/classes/A000.cls
+++ b/classes/A000.cls
@@ -8,6 +8,6 @@ return sai231111;
 //dsdsd1234111
 //NewPR1ssvxcvcvcvcv11
 //12223111111111111111111111111111111mbmnbmnbmnb
-//fxcvbcb vcbvcnvbnvbnvnbcnvvbnvbnvbmnvbmbnmbmnbmnb,nn,nm,mn,nmnb
+//fxcvbcb vcxvv,nn,nm,mn,nmnb
 }
 }
