--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -11,7 +11,7 @@ return a0123111111; //line7 src modifylast1
 //a2111111111111111111111111
 //Testrep modify11111111111111111111111
 //a11233434cxbcbvcb
-//new Test1234343543546546111111111111cbvcbcvnvbnvvcxvxcvv
+//new Test1234343543546546111111111111cbvcbcvnvbnvbnbnmnbmnvnvbmnbmb,mnb,mn,mn,mn.mn.m.,.
 }
 }
 }
