--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -1,6 +1,6 @@
 public Class A0
 {
-//Hello World! 
+//Helloas! 
 public Account createAccount(String name)  //method to create account
 {
 Account QDTest= new Account();
