--- a/classes/A000.cls
+++ b/classes/A000.cls
@@ -11,7 +11,6 @@ return sai231111;
 //upodarevcxvxcbcbcbcnvvbnvbnbmbmb
 //new1233asfdfdsfdsgfdgvxcvxcv
 //new11111111
-//newupdate1234vdxcvxcbcvbvnvbnvbnvbnvbbvcbvcbvvfbcbcbvcbcbvbvnb
-//commit3 Commoit4 ist gdgffdg bcbcbv fdfdsfsfgfgfnvnvbnvnvcxvcxvcx
+//newupdate1234 vvcvbcb vdxcvvc
 }
 }
