Sai RL1_Branch1_1

--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -2,9 +2,9 @@ public Class A0
 {
 public Account createAccount(String name)  //method to create account
 {
-Account a921= new Account();
-a921.Name = name;
-return a921;
-//a921
+Account s21= new Account();
+s21.Name = name;
+return s21;
+//sai89075re1
 }
 }
