--- a/classes/A0.cls
+++ b/classes/A0.cls
@@ -11,6 +11,6 @@ return a0123111111; //line7 src modifylast1
 //a2111111111111111111111111
 //Testrep modify11111111111111111111111
 //a11233434cxbcbvcb
-//new cxzczcxzc,mnb,mn,mn,mn.mn.m.,.
+//new cxzczcxzcvvcxvxmnb,mn,mn,mn.mn.m.,.
 }
 }
